--- a/css/style.css
+++ b/css/style.css
@@ -6,143 +6,72 @@ body {
   background: #333;
 }
 
-nav {
-	margin: 0px auto; 
-	text-align: center;
-}
-
-nav ul ul {
-	display: none;
-}
-
-	nav ul li:hover > ul {
-		display: block;
-	}
-
-
-nav ul {
-  width:100%;
-  height:20px;
-	background: #FFF; 
-	border-radius: 0;
-	list-style: none;
-	position: relative;
-	display: inline-table;
-}
-	nav ul:after {
-		content: ""; 
-		clear: both; 
-		display: block;
-	}
-
-	nav ul li {
-		float: left;
-	}
-		nav ul li:hover {
-			background: #333;
-		}
-			nav ul li:hover a {
-				color: #FFF;
-			}
-		
-		nav ul li a {
-			display: left; 
-			padding: 5px 20px;
-			color: #333; 
-			text-decoration: none;
-		}
-			
-		
-	nav ul ul {
-		background: #FFF;
-		color: #333;
-		border-radius: 0px; 
-		padding: 0;
-		position: absolute; 
-		top: 100%;
-	}
-		nav ul ul li {
-			float: left; 
-			position: absolute;
-		}
-			nav ul ul li a {
-				padding: 5 20px;
-				color: #333;
-			}	
-				nav ul ul li a:hover {
-					background: #333;
-					color:#FFF;
-				}
-		
-	nav ul ul ul {
-		position: absolute; 
-		left: 100%; 
-		top:0;
-	}
-		
-
-
-.click-nav {
+.zoom {
   width: 100%;
-  height: 25px;
-  font-size: 12px;
-  font-family: Tahoma, Geneva, sans-serif;
-  text-align: left;
-  background-color:#FFF;
-  border-radius: 0;
+  height: 100%;
+  background: #333;
 }
 
-.click-nav ul {
-  display: inline;
-  position: relative;
-  font-weight:normal;
+.zoom:after {
+	content:'/';
+	display:block; 
+	padding 2px 2px; 
+	position:absolute; 
+	top:0;
+	right:0;
+	color: #fff;
 }
 
-.click-nav ul li {
-  cursor:pointer;
+.controlbar {
+  width: 100%;
+  height: 35px;
+  position:fixed;
+  bottom: 0;
+  background: #FFF;
 }
 
-.click-nav ul li ul {
-  position:absolute;
-  left:0;
-  right:0;
-}
-
-.click-nav ul .clicker {
-  position:relative;
+.controlbutton.left {
+  display: inline-block;
+  padding: 6px 5px;
+  float:left;
   background:#FFF;
-  color:#333;
+  text-decoration: none !important;
+  color:#000;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
-.click-nav ul .clicker:hover,.click-nav ul .active {
+.controlbutton.left:hover {
+  display: inline-block;
+  padding: 6px 5px;
+  float:left;
   background:#555;
+  text-decoration: none !important;
+  color:#000;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
-.click-nav img {
-  position:absolute;
-  top:9px;
-  left:12px;
-}
-.click-nav ul li a {
-  -o-transition:background-color 0.2s ease-in-out;
-  -webkit-transition:background-color 0.2s ease-in-out;
-  -moz-transition:background-color 0.2s ease-in-out;
-  display:block;
-  /* padding:8px 10px 8px 40px; */
+.controlbutton.right {
+  display: inline-block;
+  padding: 6px 5px;
+  float:right;
   background:#FFF;
-  color:#333;
-  text-decoration:none;
+  text-decoration: none !important;
+  color:#000;
+  border: 1px solid transparent;
+  border-radius: 4px; 
 }
 
-.click-nav ul li a:hover {
-  background:#FFF;
-}
-
-/* Fallbacks */
-.click-nav .no-js ul {
-  display:none;
-}
-
-.click-nav .no-js:hover ul {
-  display:block;
+.controlbutton.right:hover {
+  display: inline-block;
+  padding: 6px 5px;
+  float:right;
+  background:#555;
+  text-decoration: none !important;
+  color:#000;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
