--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,12 @@ body {
   border: 1px solid transparent;
   border-radius: 4px;
 }
+
+.alertbar {
+  display: inline-block;
+  padding: 5px 5px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  background-color:transparent;
+}
