--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
   text-decoration: none !important;
   color:#000;
   cursor: pointer;
-  border: 1px solid transparent;
+  border: zpx solid transparent;
   border-radius: 4px;
 }
 
@@ -76,11 +76,16 @@ body {
   border-radius: 4px;
 }
 
-.alertbar {
+.progressbar {
   display: inline-block;
-  padding: 5px 5px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-  background-color:transparent;
+  background-color: black;
+  border-radius: 13px; /* (height of inner div) / 2 + padding */
+  padding: 3px 3px;
+}
+
+.progressbar > div {
+   background-color: orange;
+   width: 100%; /* Adjust with JavaScript */
+   height: 10px;
+   border-radius: 10px;
 }
