--- a/css/style.css
+++ b/css/style.css
@@ -22,13 +22,17 @@ body {
 	color: #fff;
 }
 
+.frame {
+
+}
+
 .floating_label {
   position:absolute; z-index:200; top:50px; left:50px;
 }
 
 .controlbar {
   width: 100%;
-  height: 35px;
+  height: 30px;
   position:fixed;
   bottom: 0;
   background: #FFF;
