--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,7 @@ body {
 }
 
 .frame {
-
-}
-
-.floating_label {
-  position:absolute; z-index:200; top:50px; left:50px;
+  overflow: auto;
 }
 
 .controlbar {
@@ -99,45 +95,29 @@ body {
 }
 
 .fitVertical {
-  margin-left: auto;
-  margin-right: auto;
   height: 100%;
-  height: calc(100% - 41px);
   width: auto;
 }
 
 .spread2 .fitHorizontal {
-  margin-left: auto;
-  margin-right: auto;
   height: auto;
   width: 50%;        
 }
 
 .spread1 .fitHorizontal {
-  margin-left: auto;
-  margin-right: auto;
   height: auto;
   width: 100%;
 }
 
 .fitBoth {
-  margin-left: auto;
-  margin-right: auto;
-  width: auto;
-  height: auto;
   max-height: 100%;
-  max-height: calc(100% - 41px);
 }
 
 .spread1 .fitBoth {
-  margin-left: auto;
-  margin-right: auto;
   max-width: 100%;
 }
 
 .spread2 .fitBoth {
-  margin-left: auto;
-  margin-right: auto;
   max-width: 50%;
 }
 
