--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,6 @@
 body {
-  width: 100%;
+  width: auto;
   height: 100%;
-  margin: 0;
-  padding: 0;
   background: #333;
 }
 
@@ -15,7 +13,6 @@ body {
 .image {
   max-width: 100%;
   height: 100%;
-  max-height: 100%;
   max-height: calc(100% - 25px);
   margin: auto;
   text-align: center;
