--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
-  width: auto;
+  width: 100%;
   height: 100%;
+  overflow:auto;
   background: #333;
+  text-align: center;
 }
 
 .frame {
