update to add help menu

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5521,10 +5521,10 @@ a.thumbnail.active {
 .list-group-item {
   position: relative;
   display: block;
-  padding: 10px 15px;
+  padding: 5px 5px;
   margin-bottom: -1px;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
+  /*background-color: #ffffff;*/
+  /*border: 1px solid #dddddd;*/
 }
 
 .list-group-item:first-child {
