--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   max-height: calc(100% - 25px);
   margin: auto;
   text-align: center;
+  vertical-align:middle;
   position: relative;
 }
 
@@ -27,6 +28,23 @@ body {
   position:fixed;
   bottom: 0;
   background: #FFF;
+}
+
+.helpscreen {
+  width: 100%;
+  height: 125px;
+  position: fixed;
+  bottom: 45px;
+  background: #FFF;
+  opacity: 0.85;
+  display: none;
+}
+
+.container2 {
+  padding-right: 50px;
+  padding-left: 50px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .controlbutton.left {
