--- a/css/style.css
+++ b/css/style.css
@@ -30,15 +30,30 @@ body {
 }
 
 .helpscreen {
-  width: 100%;
-  height: 105px;
+  width: inherit;
   position: fixed;
   bottom: 45px;
   background: #FFF;
-  opacity: 0.85;
   display: none;
+  font-weight: bold;
 }
-
+.helpscreen .cont {
+    bottom: 45px;
+    width: 52px;
+    display: inline-block;
+}
+.helpscreen .cont2{
+    bottom: 45px;
+    width: 52px;
+    display: inline-block;
+}
+.helpscreen .cont2.end {
+    margin-right: 30px;
+}
+.helpscreen .cont-help {
+    margin-left: -2px;
+    display: inline-block;
+}
 .container2 {
   padding-right: 50px;
   padding-left: 50px;
