--- a/css/style.css
+++ b/css/style.css
@@ -7,20 +7,52 @@
 }
 
 .menuBardemoBasicUsage .page-container {
-  padding: 32px; }
+    padding: 32px;
+}
 
 .menuBardemoBasicUsage .page {
-  margin: 0 auto;
-  padding: 24px;
-  max-width: 680px;
-  box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25); }
+    margin: 0 auto;
+    padding: 24px;
+    max-width: 680px;
+    box-shadow: 0px 1px 2px 1px rgba(0, 0, 0, 0.25);
+}
 
 .menuBardemoBasicUsage .page h1 {
-  text-align: center;
-  font-size: 1.8rem;
-  margin-top: 0;
-  font-weight: normal; }
+    text-align: center;
+    font-size: 1.8rem;
+    margin-top: 0;
+    font-weight: normal;
+}
 
 .menuBardemoBasicUsage .page p {
-  line-height: 1.6rem; }
+    line-height: 1.6rem;
+}
 
+.image-viewer {
+    height: 98vh;
+    width: 99.5vw;
+    display: block;
+    background-color: rgba(158, 167, 184, 0.2);
+}
+
+.menubar {
+    top: 90%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-color: rgba(158, 167, 184, 0.5);
+}
+
+.page-count {
+    top: 10%;
+    left: 80%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-color: rgba(158, 167, 184, 0.5);
+}
+
+.fit-button {
+    min-width: 0 !important;
+    min-height: 0 !important;
+    line-height: 0 !important;
+}
