Update adding keyboard shortcuts

--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,16 @@
     min-height: 0 !important;
     line-height: 0 !important;
 }
+
+.zoomslider {
+    top: 10%;
+    left: 95%;
+    opacity: 0.33;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-color: rgba(158, 167, 184, 0.5);
+}
+
+.zoomslider:hover {
+    opacity: 1;
+}
